2009-01-21	Nickolay Kolchin <nbkolchin@gmail.com>
	        Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1357/cpukit
	* Makefile.am, configure.ac: Ensure creating a task with no ASR is
	honored.
	* sp47/.cvsignore, sp47/Makefile.am, sp47/init.c, sp47/sp47.doc,
	sp47/sp47.scn: New files.

2008-12-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp46/sp46.scn: New file.

2008-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1348/cpukit
	* Makefile.am, configure.ac: Add test of special case of resetting cpu
	usage information while a period is running.
	* sp46/.cvsignore, sp46/Makefile.am, sp46/init.c, sp46/sp46.doc: New
	files.

2008-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1347/cpukit
	* sp45/init.c: New file.

2008-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1347/cpukit
	* Makefile.am, configure.ac, sp30/resume.c, sp30/task1.c, sp31/delay.c:
	Rework Timer Server to ensure that the context allows for blocking,
	allocating memory, and acquiring semaphores and mutexes.
	* sp45/.cvsignore, sp45/Makefile.am, sp45/sp45.doc, sp45/sp45.scn:
	New files.

2008-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* sp19/system.h: Use "double" instead of "rtems_double".

2008-09-08	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp34/sp34.scn, sp35/sp35.scn: Convert to UNIX CR/LF style.

2008-09-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* sp35/priinv.c, sp37/init.c, sp38/init.c, sp39/init.c, sp41/init.c,
	sp42/init.c, sp43/init.c, spfatal/fatal.c, spfatal/system.h,
	spfatal_support/init.c, spfatal_support/system.h:
	Convert to "bool".

2008-09-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* spsize/size.c: Must extern _MPCI_Semaphore because it is no longer
	declared in a public place.

2008-09-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp07/system.h, sp07/tcreate.c: Convert to bool type.

2008-08-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp43/init.c: Fix derefence of uninitialized pointer.
