@@ -72,7 +72,9 @@ TA1 - rtems_semaphore_create - RTEMS_INVALID_NAME
 TA1 - rtems_semaphore_create - 1 - RTEMS_SUCCESSFUL
 TA1 - rtems_semaphore_create - 2 - RTEMS_SUCCESSFUL
 TA1 - rtems_semaphore_create - 3 - RTEMS_TOO_MANY
-TA1 - rtems_semaphore_create - RTEMS_NOT_DEFINED
+TA1 - rtems_semaphore_create - FIFO and inherit - RTEMS_NOT_DEFINED
+TA1 - rtems_semaphore_create - FIFO and ceiling - RTEMS_NOT_DEFINED
+TA1 - rtems_semaphore_create - ceiling and inherit - RTEMS_NOT_DEFINED
 TA1 - rtems_semaphore_create - RTEMS_NOT_DEFINED
 TA1 - rtems_semaphore_create - RTEMS_INVALID_NUMBER
 TA1 - rtems_semaphore_create - RTEMS_MP_NOT_CONFIGURED
