@@ -1,3 +1,11 @@
+2009-03-02	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	PR 1388/cpukit
+	* sp09/screen05.c, sp09/screen09.c, sp09/sp09.scn: Classic Semaphores
+	allow both priority inherit and ceiling attributes to be set on
+	semaphore create. These attributes are mutually exclusive and this
+	should be an error.
+
 2009-01-21	Nickolay Kolchin <nbkolchin@gmail.com>
 	        Joel Sherrill <joel.sherrill@oarcorp.com>
 
